--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -9,7 +9,7 @@ body {
     background-size: cover;
     background-position: left center;
     background-repeat: no-repeat;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.24) 0%, rgba(255, 255, 255, 0.267) 100%), url(IMG_20200624_115103_2.jpg);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.24) 0%, rgba(255, 255, 255, 0.267) 100%), url(ABG_photo_2_t620.jpg);
 }
 
 .header h1 {
